<resources>
    <string name="app_name">NewYorkTimes</string>
    <string name="article_activity">Article Details</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk">News Desk Values</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_fashion"><![CDATA[Fashion & Style]]></string>
    <string name="checkbox_sports">Sports</string>
    <string name="save">Save</string>
    <array name="sort_order">
        <item>Newest</item>
        <item>Oldest</item>
    </array>
</resources>